Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38186

tst_qvector fails (debug)/crashes (release) with MSVC2013 (32,64)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.3.0 Beta1
    • Windows 8.1 MSVC2013 32,64 only (still works with MSVC2012, apparently)
    • 71de8c0df57ddee94da71fab4a613f1df003a18f (stable, 10.4.2014, 5.3)

      Debug build:

      PASS   : tst_QVector::initializeListInt()
      FAIL!  : tst_QVector::initializeListMovable() Compared values are not the same
         Actual   (instancesCount)                : 6
         Expected (Movable::counter.loadAcquire()): 9
      tst_qvector.cpp(2061) : failure location
      FAIL!  : tst_QVector::initializeListCustom() Compared values are not the same
         Actual   (instancesCount)               : 6
         Expected (Custom::counter.loadAcquire()): 9
      tst_qvector.cpp(2068) : failure location
      

      Release build

      PASS   : tst_QVector::reallocAfterCopy(reallocAfterCopy:100,3)
      PASS   : tst_QVector::initializeListInt()
      FAIL!  : tst_QVector::initializeListMovable() Compared values are not the same
         Actual   (instancesCount)                : 6
         Expected (Movable::counter.loadAcquire()): 9
      tst_qvector.cpp(2060) : failure location
      Critical error detected c0000374
      (16e4.4c0): Break instruction exception - code 80000003 (first chance)
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for ntdl
      l.dll -
      ntdll!RtlpNtMakeTemporaryKey+0xf3:
      00007ffd`b6ca383b cc              int     3
      0:000> where
             ^ Syntax error in 'where'
      0:000> k
      Child-SP          RetAddr           Call Site
      000000d7`48dfe480 00007ffd`b6ca6a16 ntdll!RtlpNtMakeTemporaryKey+0xf3
      000000d7`48dfe590 00007ffd`b6ca7614 ntdll!RtlpNtMakeTemporaryKey+0x32ce
      000000d7`48dfe5c0 00007ffd`b6bf4f06 ntdll!RtlpNtMakeTemporaryKey+0x3ecc
      000000d7`48dfe5f0 00007ffd`b6bf2257 ntdll!RtlAllocateHeap+0x2e36
      000000d7`48dfe910 00007ffd`b6ca3b17 ntdll!RtlAllocateHeap+0x187
      000000d7`48dfea20 00007ffd`b6c62130 ntdll!RtlpNtMakeTemporaryKey+0x3cf
      000000d7`48dfea70 00007ffd`b6bf2257 ntdll!memset+0x17cf0
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\W
      INDOWS\SYSTEM32\MSVCR120.dll -
      000000d7`48dfed90 00007ffd`9a5a6a57 ntdll!RtlAllocateHeap+0x187
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for d:\d
      ev\5-vs13-stable\qt-stable\qtbase\bin\Qt5Core.dll -
      000000d7`48dfeea0 00000000`6761e0b6 MSVCR120!malloc+0x5b
      000000d7`48dfeed0 00000000`67620b33 Qt5Core!QArrayData::allocate+0x86
      000000d7`48dfef10 00000000`677d46e6 Qt5Core!QByteArray::fromRawData+0x83
      000000d7`48dfef50 00000000`677d4faf Qt5Core!QMetaObject::constructorCount+0x96
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for d:\d
      ev\5-vs13-stable\qt-stable\qtbase\bin\Qt5Test.dll -
      000000d7`48dfef90 00007ffd`a3973b65 Qt5Core!QMetaObject::indexOfMethod+0x3f
      000000d7`48dff080 00007ffd`a3975937 Qt5Test!QTest::ignoreMessage+0x45
      000000d7`48dff200 00007ffd`a39754e9 Qt5Test!QTest::qGlobalData+0x667
      000000d7`48dff490 00007ffd`a3975f88 Qt5Test!QTest::qGlobalData+0x219
      000000d7`48dff760 00007ffd`a3974a4f Qt5Test!QTest::qGlobalData+0xcb8
      *** ERROR: Module load completed but symbols could not be loaded for image00007f
      f7`c3000000
      000000d7`48dff7d0 00007ff7`c3045627 Qt5Test!QTest::qExec+0x10f
      000000d7`48dff850 00007ff7`c3045cdb image00007ff7_c3000000+0x45627
      *** ERROR: Symbol file could not be found.  Defaulted to export symbols for C:\W
      INDOWS\system32\KERNEL32.DLL -
      000000d7`48dff8b0 00007ffd`b5dc15dd image00007ff7_c3000000+0x45cdb
      000000d7`48dff8e0 00007ffd`b6c243d1 KERNEL32!BaseThreadInitThunk+0xd
      000000d7`48dff910 00000000`00000000 ntdll!RtlUserThreadStart+0x1d
      

      See http://testresults.qt-project.org/qtmetrics/autoteststatus/index.html

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            frederik Frederik Gladhorn
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes