Only define Q_COMPILER_INITIALIZER_LISTS for MSVC 12 SP 2

Nested initialization is broken before SP2, so just disable the whole
feature as tst_qvector crashes(release)/fails(debug)
Done-with: Jedrzej Nowacki

Task-number: QTBUG-38186

Change-Id: I9c5c9e55c75854fc1f05a59fab2ac7dce9b37fbb
Reviewed-by: Jędrzej Nowacki <jedrzej.nowacki@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 71de8c0df57ddee94da71fab4a613f1df003a18f https://github.com/qt/qtbase/commit/71de8c0df57ddee94da71fab4a613f1df003a18f